implemented game manager added some players (random, heuristic)